--- a/EventManagement_Application/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
+++ b/EventManagement_Application/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Reset password confirmation";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h1 class="clr-text py-1">@ViewData["Title"]</h1>
 <p>
-    Your password has been reset. Please <a asp-page="./Login">click here to log in</a>.
+    Your password has been reset. Please <a asp-page="./Login" class="clr-text">click here to log in</a>.
 </p>
