--- a/EventManagement_Application/Pages/Shared/_Layout.cshtml
+++ b/EventManagement_Application/Pages/Shared/_Layout.cshtml
@@ -59,6 +59,12 @@
                                     <a class="nav-link text-white fw-bold" asp-page="/Attendee/Requests">My Requests</a>
                                 </li>
                             }
+                            @if (User.IsInRole("User"))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-white fw-bold" asp-page="/Attendee/FavouriteEvents">Favourites</a>
+                                </li>
+                            }
                         </ul>
                         <partial name="_LoginPartial" />
                     </div>
