--- a/EventManagement_Application/wwwroot/css/site.css
+++ b/EventManagement_Application/wwwroot/css/site.css
@@ -565,7 +565,7 @@ ul {
 /* Events Carousel - Home Page */
 
 .card-img-top {
-    height: 230px;
+    height: 250px !important;
     object-fit: cover;
 }
 
@@ -994,4 +994,49 @@ ul {
     .events-grid {
         grid-template-columns: repeat(1, 1fr); /* 1 column on small screens */
     }
+}
+
+/* Pagination Styles */
+.pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.page-item {
+    margin: 0 5px;
+}
+
+.page-link {
+    color: var(--primary-color) !important;
+    border: 1px solid var(--primary-color);
+    padding: 8px 16px;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+}
+
+.page-link:hover {
+    background-color: var(--primary-color);
+    color: var(--primary-color) !important;
+    border-color: var(--primary-color);
+}
+
+.page-item.active .page-link {
+    background-color: var(--primary-color);
+    border-color: var(--primary-color);
+    color: white !important;
+}
+
+.btn-secondary {
+    background-color: var(--background-color);
+    color: white;
+}
+
+.search-form {
+    background-color: #80808021;
+    padding-top: 25px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    border-color: gray;
 }
