--- a/EventManagement_Application/Pages/Shared/_Layout.cshtml
+++ b/EventManagement_Application/Pages/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - EventManagement_Application</title>
+    <link rel="icon" type="image/x-icon" href="~/Eventify-logo.ico">
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <!-- Bootstrap CSS -->
@@ -19,7 +20,9 @@
         <header>
             <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light box-shadow nav justify-content-center">
                 <div class="container mx-5">
-                    <a class="navbar-brand text-white fw-bold" asp-area="" asp-page="/Index">Eventify</a>
+                    <a class="navbar-brand text-white fw-bold" asp-area="" asp-page="/Index">
+                       <img class="logo-nav mb-2" src="~/images/Eventify-Logo-White-small.png" alt="Eventify Logo" />
+                    </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -83,7 +86,7 @@
                 <div class="row container flex-row d-flex justify-content-center">
                     <div class="col-lg-3 col-md-6 col-sm-12 my-3">
                         <div class="d-flex flex-column align-items-center">
-                            <img class="logo mb-2" src="~/images/light-LogoEventify.png" alt="Eventify Logo" />
+                            <img class="logo mb-2" src="~/images/Eventify-Logo-White-small.png" alt="Eventify Logo" />
                             <a class="btn btn-light my-3 text-primary-color" to="#">Join With Us</a>
                         </div>
                     </div>
