update the source code

--- a/EventManagement_Application/Pages/Attendee/Feedback.cshtml
+++ b/EventManagement_Application/Pages/Attendee/Feedback.cshtml
@@ -15,7 +15,7 @@
             <!-- User Name -->
             <div class="mb-3">
                 <label class="form-label">Your Name</label>
-                <input type="text" class="form-control" name="UserName" value="@currentUser.UserName" required readonly />
+                <input type="text" class="form-control" name="UserName" value="@currentUser.FirstName @currentUser.LastName" required readonly />
             </div>
 
             <!-- Rating -->
