--- a/EventManagement_Application/Pages/Organizer/Tickets/Create.cshtml
+++ b/EventManagement_Application/Pages/Organizer/Tickets/Create.cshtml
@@ -137,7 +137,7 @@
     <!-- Buttons Section -->
     <div class="form-buttons">
         <button type="submit" class="btn bg-primary-color text-white">Create Ticket</button>
-        <a asp-page="./Events/Details" asp-route-id="@Model.Event.Id" class="btn btn-secondary">Back to Event</a>
+        <a asp-page="../Events/Details" asp-route-id="@Model.Event.Id" class="btn btn-secondary">Back to Event</a>
     </div>
 </form>
 
