--- a/EventManagement_Application/Pages/Organizer/Events/Edit.cshtml
+++ b/EventManagement_Application/Pages/Organizer/Events/Edit.cshtml
@@ -10,7 +10,7 @@
 <div class="container mt-5">
     <h1 class="mb-4">Edit Your Event</h1>
 
-    <form method="post" class="needs-validation" novalidate>
+    <form method="post" class="needs-validation" novalidate enctype="multipart/form-data">
         <input type="hidden" asp-for="Event.Id" />
         <input type="hidden" asp-for="Event.OrganizerId" />
 
@@ -54,16 +54,25 @@
             </div>
         </div>
 
-        <div class="form-group mb-4">
-            <label asp-for="Event.Mode" class="form-label">Event Mode</label>
-            <select asp-for="Event.Mode" class="form-select" required>
-                <option value="">Select Mode</option>
-                @foreach (var mode in Enum.GetValues(typeof(EventMode)).Cast<EventMode>())
-                {
-                    <option value="@mode">@mode</option>
-                }
-            </select>
-            <span asp-validation-for="Event.Mode" class="text-danger"></span>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group mb-3">
+                    <label asp-for="Event.EventImage" class="form-label">Event Image</label>
+                    <input asp-for="Event.EventImage" type="file" class="form-control" required/>
+                    <span asp-validation-for="Event.EventImage" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group col-md-6 mb-4">
+                <label asp-for="Event.Mode" class="form-label">Event Mode</label>
+                <select asp-for="Event.Mode" class="form-select" required>
+                    <option value="">Select Mode</option>
+                    @foreach (var mode in Enum.GetValues(typeof(EventMode)).Cast<EventMode>())
+                    {
+                        <option value="@mode">@mode</option>
+                    }
+                </select>
+                <span asp-validation-for="Event.Mode" class="text-danger"></span>
+            </div>
         </div>
 
         <div class="d-grid gap-2 d-md-flex justify-content-md-end">
